terminando las vistas

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 GROUP_NAME=Echoes
-APP_NAME=Laravel
+APP_NAME="Laravel grupo Echoes"
 APP_ENV=local
 APP_KEY=base64:/bZINdeOQeG6VE1R3iSthfSKe3LHEjFA1mQWM2N2hjU=
 APP_DEBUG=true
